Replace FluentIterable with Java 8 stream
Change-Id: Ie1992cffbf9dd877048b6f65a105ebd7cc30535a